Adding new lines

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Neog Camp</title>
 </head>
 <body>
-    Hi Im varun, Hope you are doing good
+    Hi Im varun, Hope you are doing good.
+
+    I am working at Amazon
 </body>
 </html>
